# SceneCode

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: lint.yaml  smoke_test.yaml
configs/: config.yaml
configs/ceiling_agent/: base_ceiling_agent.yaml  base_ceiling_agent_4.1.yaml  stateful_ceiling_agent.yaml
configs/experiment/: base_experiment.yaml  indoor_scene_generation.yaml
configs/floor_plan_agent/: base_floor_plan_agent.yaml  stateful_floor_plan_agent.yaml
configs/furniture_agent/: base_furniture_agent.yaml  stateful_furniture_agent.yaml
configs/manipuland_agent/: base_manipuland_agent.yaml  stateful_manipuland_agent.yaml
configs/wall_agent/: base_wall_agent.yaml  stateful_wall_agent.yaml
examples/: prompts.csv
materials/: .gitignore
scenecode/agent_utils/: action_logger.py  articulated_physics_analyzer.py  asset_manager.py  asset_registry.py  base_stateful_agent.py  checkpoint_state.py  clearance_zones.py  clip_embeddings.py  code_articulated_conversion.py  code_object_generation.py  coordinate_utils.py  drake_utils.py  flux_klein_worker.py  gpu_diagnostics.py  house.py  image_generation.py  intra_turn_image_filter.py  loop_detector.py  material_generator.py  materials.py  mesh_canonicalization.py  mesh_physics_analyzer.py  mesh_utils.py  physical_feasibility.py  physics_tools.py  physics_validation.py  (+23 more)
scripts/: clean_scene_output.py  compute_ambientcg_embeddings.py  compute_articulated_embeddings.py  convert_dmd_welding.py  convert_partnet_mobility.py  convert_partnet_parallel.sh  convert_urdf_to_sdf.py  download_ambientcg.py  download_hssd_data.sh  download_objaverse_data.sh  export_scene_to_mujoco.py  fix_artvip_joint_poses.py  fix_usd_isaac_sim.py  install_hunyuan3d.sh  install_sam3d.sh  install_sam3d_docker.sh  prepare_objaverse.py  requirements-mujoco-export.txt  run_subset_sequential.py  setup_mujoco_export.sh  test_asset_retrieval.py  test_material_retrieval.py
tests/: conftest.py
(+361 files in other folders)
