[project]
name = "scenecode"
version = "0.1.0"
description = "Agentic generation of code-backed simulation-ready indoor scenes"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "autoflake>=2.3.1",
    "black>=25.1.0",
    "bpy==4.5.4",
    "coacd>=1.0.7",
    "colorama>=0.4.6",
    "diffusers>=0.35.1",
    "drake>=1.47.0",
    "einops>=0.8.1",
    "flask>=3.1.2",
    "google-genai>=1.0.0",
    "hydra-core>=1.3.2",
    "isort==5.12.0",
    "lxml>=6.0.0",
    "manifold3d>=3.0.0",
    "mathutils>=3.3.0",
    "ninja>=1.13.0",
    "numpy>=1.26,<2.0",
    "objathor>=0.0.8",
    "omegaconf>=2.3.0",
    "open-clip-torch>=2.20.0",
    "openai>=2.8.0",
    "openai-agents>=0.6.4",
    "opencv-python>=4.10.0.84,<4.12",
    "pybind11>=3.0.1",
    "pygltflib>=1.16.5",
    "pymeshlab==2023.12.post3",
    "python-fcl>=0.7.0.10",
    "pyvirtualdisplay>=3.0",
    "rtree>=1.4.1",
    "scipy>=1.15.3",
    "setuptools<71.0.0",
    "shapely>=2.1.2",
    "torch>=2.5.0,<2.6.0",
    "torchvision>=0.20.0,<0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.4",
    "trimesh>=4.7.4",
    "vhacdx>=0.0.10",
    "wandb>=0.21.1",
    "xatlas>=0.0.11",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-testmon>=2.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scenesmith"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
lines_between_types = 1
combine_as_imports = true
known_first_party = ['scenesmith']

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[[tool.uv.index]]
name = "blender"
url = "https://download.blender.org/pypi/"
explicit = true 

[tool.uv.sources]
bpy = { index = "blender" }                                                                                                                                                                                               
